--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contador.css" />
     <script src="contador.js"></script>
-    <title>Document</title>
+
+    <title>Cronômetro</title>
+    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
 </head>
 <body>
     <article class="clock" id="clock">
