--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <h3>Contador com Javascript!</h3>
         <div class="count">
             <h4>Digite o tempo:</h4>
-            <input type="text" id="inputTime">
+            <input type="text" id="inputTime" class="inputTime">
         </div>
         <div class="count">
             <div id="timer">00:00</div>
         </div>
-        <button class="btn" id="inicia">Iniciar</button>
+        <input type="button" value="Iniciar" id="inicia" class="btn">
     </article>
 </body>
 </html>
